// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render <ToggleButtonGroupField> inside a Form 1`] = `
<DocumentFragment>
  <form
    id="toggleButtonGroupForm.form"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
    >
      <div
        class="MuiBox-root MuiBox-root-1"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
          >
            Example Editor
          </div>
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <div
              class="MuiToggleButtonGroup-root"
              role="group"
            >
              <button
                aria-pressed="false"
                class="MuiButtonBase-root MuiToggleButton-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal"
                tabindex="0"
                type="button"
                value="1"
              >
                <span
                  class="MuiToggleButton-label"
                >
                  Toggle 1
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
              <button
                aria-pressed="false"
                class="MuiButtonBase-root MuiToggleButton-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal"
                tabindex="0"
                type="button"
                value="2"
              >
                <span
                  class="MuiToggleButton-label"
                >
                  Toggle 2
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
              <button
                aria-pressed="false"
                class="MuiButtonBase-root MuiToggleButton-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal"
                tabindex="0"
                type="button"
                value="3"
              >
                <span
                  class="MuiToggleButton-label"
                >
                  Toggle 3
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`should render <ToggleButtonGroupField> inside a FormView 1`] = `
<DocumentFragment>
  <form
    id="toggleButtonGroupFormView.form"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation3 MuiPaper-rounded"
    >
      <div
        class="MuiBox-root MuiBox-root-2"
      >
        <div
          class="MuiBox-root MuiBox-root-3"
        >
          <div
            class="MuiGrid-root MuiGrid-container"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <div
                class="MuiBox-root MuiBox-root-4"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
                  >
                    Example Editor
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    <div
                      class="MuiToggleButtonGroup-root"
                      role="group"
                    >
                      <button
                        aria-pressed="false"
                        class="MuiButtonBase-root MuiToggleButton-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal"
                        tabindex="0"
                        type="button"
                        value="1"
                      >
                        <span
                          class="MuiToggleButton-label"
                        >
                          Toggle 1
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </button>
                      <button
                        aria-pressed="false"
                        class="MuiButtonBase-root MuiToggleButton-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal"
                        tabindex="0"
                        type="button"
                        value="2"
                      >
                        <span
                          class="MuiToggleButton-label"
                        >
                          Toggle 2
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </button>
                      <button
                        aria-pressed="false"
                        class="MuiButtonBase-root MuiToggleButton-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal"
                        tabindex="0"
                        type="button"
                        value="3"
                      >
                        <span
                          class="MuiToggleButton-label"
                        >
                          Toggle 3
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
